<resources>
    <string name="API_KEY">AIzaSyA4fePSRFYo9jVr2jGXpRX2M_R-TTAJu64</string>
    <string name="app_name">Справочник МЭС С-З</string>
    <string name="action_about">О программе</string>
    <string name="action_settings">Настройки</string>
    <string name="Версия">Версия</string>
    <string name="about_text">Карельское ПМЭС - филиал ПАО Россети\n Справочник абонентов\n 185003, Республика Карелия, \nг.Петрозаводск, проспект А.Невского,д.53А \n тел/ф. (8142) 716068, 716059 \n email: kpmes@kp.sz.fsk-ees.ru \n http://www.tcc.fsk-ees.ru\n \n \n Фарисеев П.С.</string>
    <string name="admin">adm</string>
    <string name="password">psw</string>
    <string name="updatesprkpmes">Обновление доступно</string>
    <string name="list">lst</string>
    <string name="callreceiver">Проверка входящего/исходящего звонка</string>
    <string name="outgoing">Не показывать, если есть в Контактах</string>
    <string name="num_list">num_lst</string>
    <string name="absXX">XX</string>
    <string name="absYY">YY</string>
    <string name="DBPATH">DBPATH</string>
    <string name="dayupdate">dayup</string>
    <string name="newstyle">Альтернативный стиль</string>
    <string name="uvedom">Уведомления</string>
    <string name="autoupdate">Обновлять базу автоматически</string>
    <string name="upd">upd</string>
    <string name="imageload">Показывать фотографии</string>
    <string name="imagesavetodisk">Сохранять фотографии</string>
    <string name="text1_razmer">Средний</string>
    <string name="text2_razmer">Меленький</string>
    <string name="osn">1</string>
    <string name="dop">2</string>
    <string name="lastUpdateTime">Сервис</string>
    <string name="textview">TextView</string>
    <string name="Updatespr">Обновить базу справочника</string>
    <string name="todo">TODO</string>
    <string name="nastrosnshrift">Настройки основного шрифта</string>
    <string name="razmerosnshrift">Размер основного шрифта</string>
    <string name="stilosnshrift">Стиль основного шрифта</string>
    <string name="nastrdopshrift">Настройки дополнительного шрифта</string>
    <string name="razmerdopshrift">Размер дополнительного шрифта</string>
    <string name="stildopshrift">Стиль дополнительного шрифта</string>
    <string name="clickPhone">clickPh</string>
    <string name="blacklist">blacklst</string>
    <string name="vidStyle">Стиль справочника</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">PUSH Сообщение</string>
    <string name="msg_token_fmt" translatable="false">%s</string>
    <string name="msg_subscribe_failed">msg_subscribe_failed</string>
    <string name="phoneNumber">phoneNumber</string>
    <string name="token">token</string>
    <string name="deviceId">deviceId</string>
    <string name="upLoadToServer">upLoadToServer</string>
    <string name="colorPrimForText">Цвет основного шрифта</string>
    <string name="colorSecForText">Цвет дополнительного шрифта</string>
    <string name="color_background">Цвет фона</string>
    <string name="color_background_summary">color_background_summary</string>
    <string name="colorPrimBackgrnd">#E5E5E5</string>
    <string name="colorSecBackgrnd">Цвет дополнительного фона</string>
    <string name="accessTokenToPushMessage">accessTokenToPushMessage</string>
    <string name="your_web_client_id">792807325359-p6k787dehsrkf6cp7oh5o5d332q6pqvr.apps.googleusercontent.com</string>
    <string name="accesstoken">accesstoken</string>


</resources>
