<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <androidx.preference.PreferenceCategory
            android:title="Основные настройки"/>
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="@string/newstyle"
            android:title="@string/newstyle" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="@string/autoupdate"
            android:title="@string/autoupdate" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="@string/callreceiver"
            android:title="@string/callreceiver" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="@string/outgoing"
            android:title="@string/outgoing"
            android:dependency="@string/callreceiver"
            android:summary="Не отображается информация при звонке об абоненте, если такой есть в Контактах"/>
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="@string/imageload"
            android:title="@string/imageload" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="@string/imagesavetodisk"
            android:title="@string/imagesavetodisk"
            android:summary="Сохранять фотографии в память телефона"/>
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="@string/uvedom"
            android:title="@string/uvedom" />
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="#E5E5E5"
            android:key="@color/colorPrimBackgrnd"
            android:title="@string/colorPrimBackgrnd"/>
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/colorSecBackgrnd"
            android:key="@color/colorSecBackgrnd"
            android:title="@string/colorSecBackgrnd"/>


        <androidx.preference.PreferenceCategory
            android:title="@string/nastrosnshrift">
                <androidx.preference.ListPreference
                    android:defaultValue="20"
                    android:entries="@array/text1_razmer"
                    android:entryValues="@array/text1_razmer2"
                    android:key="@string/text1_razmer"
                    android:title="@string/razmerosnshrift" />
                <androidx.preference.ListPreference
                    android:defaultValue="1"
                    android:dialogTitle="Выберите стиль для шрифта"
                    android:entries="@array/nazvanieosn"
                    android:entryValues="@array/nazvanieosn"
                    android:key="@string/osn"
                    android:title="@string/stilosnshrift" />

                <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
                    android:defaultValue="@color/colorPrimForText"
                    android:key="@string/colorPrimForText"
                    android:title="@string/colorPrimForText"/>

        </androidx.preference.PreferenceCategory>

        <androidx.preference.PreferenceCategory android:title="@string/nastrdopshrift">

                <androidx.preference.ListPreference
                    android:defaultValue="16"
                    android:entries="@array/text1_razmer"
                    android:entryValues="@array/text1_razmer2"
                    android:key="@string/text2_razmer"
                    android:title="@string/razmerdopshrift" />

                <androidx.preference.ListPreference
                    android:defaultValue="1"
                    android:dialogTitle="Выберите стиль для шрифта"
                    android:entries="@array/nazvanieosn"
                    android:entryValues="@array/nazvanieosn"
                    android:key="@string/dop"
                    android:title="@string/stildopshrift" />

                <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
                    android:defaultValue="@color/colorSecForText"
                    android:key="@string/colorSecForText"
                    android:title="@string/colorSecForText"/>

        </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>